# prequery-preprocess

./: Cargo.toml  Justfile  README.md  justfile
.github/workflows/: release.yml
src/: args.rs  config.rs  entry.rs  error.rs  lib.rs  main.rs  manifest.rs  preprocessor.rs  preprocessors.rs  prequery.rs  query.rs  reporting.rs  utils.rs  world.rs
src/preprocessor/: factory.rs  web_resource.rs
src/preprocessor/web_resource/: config.rs  index.rs  preprocessor.rs  query_data.rs
src/preprocessors/: shell.rs  web_resource.rs
src/preprocessors/shell/: error.rs  factory.rs  manifest.rs  query_data.rs  world.rs
src/preprocessors/web_resource/: config.rs  error.rs  factory.rs  index.rs  manifest.rs  query_data.rs  world.rs
src/prequery/: web_resource.rs
tests/: .gitignore  Justfile  dummy_test.rs  dummy_world_test.rs  justfile  shell_test.rs  web_resource_test.rs
tests-e2e/: justfile
tests-e2e/success-custom-query-partial/: typst.toml
tests-e2e/success-index-download/: .gitignore
tests-e2e/success-index-skipped/: typst.toml  web-resource-index.toml
tests-e2e/success-index-updated/: .gitignore
tests-e2e/success-python-joined/: exec.py  main.typ  typst.toml
tests-e2e/success-python-plain/: main.typ  typst.toml
tests-e2e/success-skipped/: .gitignore
tests/common/: mod.rs
tests/dummy/: run.txt
tests/failure-outside-root/: main.typ
tests/shell/: joined-python-failed-length.txt  joined-python-separate.txt  joined-python.txt  no-inputs.txt  python-failed-invalid-output.txt  python-failed-joined-plain-text-input.txt  python-failed-outside-root.txt  python-failed-process.txt  python-separate.txt  python.txt
tests/success-custom-query/: .gitignore  typst.toml
tests/success-custom-query-partial/: main.typ
tests/success-download/: typst.toml
tests/success-index-skipped/: web-resource-index.toml
tests/success-index-updated/: main.typ  web-resource-index-original.toml
tests/web-resource/: fail-io-error.txt  fail-outside-root.txt  no-resources.txt  success-changed.txt  success-existing.txt  success-forced.txt  success.txt
