[package]
name = "typst-preprocess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prequery-preprocess"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["debug"] }
itertools = "0.14.0"
mockall = { version = "0.13.1", optional = true }
once_cell = "1.19.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.14"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
typst-syntax = "0.13.1"

[features]
test = ["mockall"]

[dev-dependencies]
typst-preprocess = { path = ".", features = ["test"] }
