[package]
name = "prequery-preprocess"
version = "0.2.0"
description = "A preprocessor for prequery metadata embedded in Typst documents."
authors = ["Clemens Koza <https://github.com/SillyFreak/>"]
edition = "2024"
homepage = "https://typst-community.github.io/prequery/"
repository = "https://github.com/typst-community/prequery-preprocess"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["typst"]

[[bin]]
name = "prequery"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["debug"] }
futures = "0.3.31"
itertools = "0.14.0"
mockall = { version = "0.13.1", optional = true }
once_cell = "1.19.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.14"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
typst-syntax = "0.13.1"

[features]
test = ["mockall"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dev-dependencies]
serial_test = "3.2.0"
prequery-preprocess = { path = ".", features = ["test"] }
